--- a/gallery.html
+++ b/gallery.html
@@ -3,7 +3,8 @@
 <html>
 
 <head>
-
+      <!-- A test comment-->
+   <!--import the webpage's stylesheet-->
    <link rel="stylesheet" type="text/css" href="my-style.css">
    <link href="https://fonts.googleapis.com/css2?family=Covered+By+Your+Grace&display=swap" rel="stylesheet">
 
